Fix an error with AE::DBI on shutdown, wrapping

--- a/share/static/site.css
+++ b/share/static/site.css
@@ -70,6 +70,7 @@ div.window {
 }
 
 div.window table {
+  table-layout: fixed;
   width: 100%;
   height: 100%;
   padding: 0;
